--- a/style.css
+++ b/style.css
@@ -21,8 +21,9 @@ body {
 
 #profile {
   margin: 20px;
-  padding: 5vh 5vw;
+  padding: max(5vh, 40px) max(5vw, 20px);
   max-width: 615px;
+  min-width: 340px;
 }
 
 #profile-title {
